[package]
name = "pixirust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.11"
lazy_static = "1.4.0"
rand = "0.8.4"
regex = "1.5.4"
reqwest = { version = "0.11", features = ["socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
tokio = { version = "1", features = ["macros"] }
urlencoding = "2.1"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
